# NMOX-Server

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.nginx  Dockerfile.squeak  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: setup.sh
x/Docker/: README.md  nmox-nginx.Dockerfile
x/boot/: README.md  init.sh
x/dev/: README.md
x/etc/: README.md
x/init/: README.md
x/lib/: HTML5.st  NMOX.html  NMOX.st  NMOXSqueak6.0-22148-64bit.changes  NMOXSqueak6.0-22148-64bit.image  README.md  SqueakV60.sources
x/lib/core/: core.cs  core.dart  core.java  core.js  core.php  core.py  core.rb  core.rs  core.st  core.ts
x/lib/org/: NMOX.org
x/lib/rust/: Cargo.toml
x/lib/squeak-history/lists/squeak-dev/: hyperkitty_squeak-dev_2024-09-03_2024-09-11.mbox  hyperkitty_squeak-dev_2024-09-10_2024-09-18.mbox  hyperkitty_squeak-dev_2024-09-17_2024-09-25.mbox  hyperkitty_squeak-dev_2024-09-24_2024-10-02.mbox  hyperkitty_squeak-dev_2024-10-01_2024-10-09.mbox  hyperkitty_squeak-dev_2024-10-08_2024-10-16.mbox  hyperkitty_squeak-dev_2024-10-15_2024-10-23.mbox  hyperkitty_squeak-dev_2024-10-22_2024-10-30.mbox  hyperkitty_squeak-dev_2024-10-29_2024-11-06.mbox  hyperkitty_squeak-dev_2024-11-05_2024-11-13.mbox  hyperkitty_squeak-dev_2024-11-12_2024-11-20.mbox  hyperkitty_squeak-dev_2024-11-19_2024-11-27.mbox  hyperkitty_squeak-dev_2024-11-26_2024-12-03.mbox
x/lib/wasm/: Cargo.toml
x/lib/wasm/src/: fib_module.rs
x/media/: README.md
x/mnt/: README.md
x/opt/: README.md
x/proc/: README.md
x/root/: README.md
x/sbin/: README.md
x/srv/: README.md
x/sys/: README.md
x/tmp/: README.md
x/usr/: README.md
x/usr/share/nginx/html/: index.html
