[package]
name = "nmox-core"
version = "3.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "nmox_core"
path = "src/lib.rs"

[[bin]]
name = "nmox-server"
path = "src/main.rs"