[package]
name = "nmox-wasm"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"